Remove horizaccordion__container transition to prevent element overflow

--- a/shared/scss/components/common/horizaccordion.scss
+++ b/shared/scss/components/common/horizaccordion.scss
@@ -54,7 +54,6 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    transition: all .2s ease-in-out 0.2s;
     margin-top: $base*2;
     box-sizing: border-box;
 
